Fix presets gaps

--- a/packages/survey-creator-core/src/presets-theme/blocks/sps-matrixdynamic.scss
+++ b/packages/survey-creator-core/src/presets-theme/blocks/sps-matrixdynamic.scss
@@ -177,6 +177,11 @@
     border-bottom: var(--sjs2-border-width-x100, 1px) solid var(--sjs2-color-border-basic-secondary, #d4d4d4);
     box-sizing: border-box;
   }
+  .sd-question__header-and-content-container {
+    hr {
+      display: none;
+    }
+  }
 }
 
 .sps-matrixdynamic__dragged-row {
